new portfolio added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mishkat Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div>
+            <h1>Welcome To</h1>
+            <h1><span class="saddlebrown-color">Mishkat Khan</span> World!</h1>
+            <h3>Pâtissier and Programmer</h3>
+            <p>Hey guys!! This is Mishkat Khan.I am not a professional Pâtissier But I love to bake cakes.But recently I
+                am
+                doing Programming.I am still learning this.So you Guys can call me a Beginnner Programmer.My first Love
+                is
+                to bake Cakes and to eat cakes.Then comes Programming.Learning programming and baking cake is not so
+                easy.You will have to keep patience Only then You can be Successful.I am still learning these 2
+                Professions.I will not stop until I become a Pâtissieror or A Successful Programmer.</p>
+        </div>
+        <div>
+            <img src="images/mishkat-pic-with-bg (1).png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
