--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section>
-        <div>
+        <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="saddlebrown-color">Mishkat Khan</span> World!</h1>
             <h3>Pâtissier and Programmer</h3>
@@ -25,7 +25,8 @@
                 to bake Cakes and to eat cakes.Then comes Programming.Learning programming and baking cake is not so
                 easy.You will have to keep patience Only then You can be Successful.I am still learning these 2
                 Professions.I will not stop until I become a Pâtissieror or A Successful Programmer.</p>
-        </div>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/maisha-khan-b40481216/">HIRE ME</a>
+        </div class="half-width">
         <div>
             <img src="images/mishkat-pic-with-bg (1).png" alt="">
         </div>
