--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
             <img src="images/mishkat-pic-with-bg (1).png" alt="">
         </div>
     </section>
+    <section class="dream-big"></section>
+    <div>
+        <img src="images/mishkat-pic-with-bg(2).png" alt="">
+    </div>
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a web Developer</h2>
+        <p>Well I love baking. but when the Question comes to choose a profession then I will choose to become a Web
+            Developer.I love to code.I also enjoy doing this.One should do what he enjoys.So we all should follow our
+            heart.I take a oath that I will not stop untill I become master of web Developing.Though I have started my
+            journey but it is a long way to go.I only want to tell this that please pray for me so that i can fulfill my
+            dream and achieve my goal.</p>
+        <a class="link-button" target="_blank" href="DOWNLOAD RESUME"></a>
+    </div>
 </body>
 
 </html>
