--- a/index.html
+++ b/index.html
@@ -31,20 +31,43 @@
             <img src="images/mishkat-pic-with-bg (1).png" alt="">
         </div>
     </section>
-    <section class="dream-big"></section>
-    <div>
-        <img src="images/mishkat-pic-with-bg(2).png" alt="">
-    </div>
-    <div class="half-width">
-        <h1>Dream Big</h1>
-        <h2>Become a web Developer</h2>
-        <p>Well I love baking. but when the Question comes to choose a profession then I will choose to become a Web
-            Developer.I love to code.I also enjoy doing this.One should do what he enjoys.So we all should follow our
-            heart.I take a oath that I will not stop untill I become master of web Developing.Though I have started my
-            journey but it is a long way to go.I only want to tell this that please pray for me so that i can fulfill my
-            dream and achieve my goal.</p>
-        <a class="link-button" target="_blank" href="DOWNLOAD RESUME"></a>
-    </div>
+    <section class="dream-big">
+        <div>
+            <img src="images/mishkat-pic-with-bg(2).png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>Well I love baking. but when the Question comes to choose a profession then I will choose to become a Web
+                Developer.I love to code.I also enjoy doing this.One should do what he enjoys.So we all should follow
+                our
+                heart.I take a oath that I will not stop untill I become master of web Developing.Though I have started
+                my
+                journey but it is a long way to go.I only want to tell this that please pray for me so that i can
+                fulfill my
+                dream and achieve my goal.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div>
+            <h1>Full Stack Developer</h1>
+            <h3>2023-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div>
+            <h1>Baby Web Developer</h1>
+            <h3>2021-2023 | Hero Learner</h3>
+            <p>My aim was never to be a Web Developer.I wanted to be something else.But one day I read an article about
+                Programming and Web Developing.I felt interested.Then I started to watch tutorials about these
+                things.Day by Day my interest grew up for web Development.So I made myself a Web developer.It was a very
+                interesting journey.But still I have a Long Way to go.I wanna learn and explore more.It was fun working
+                at Programming Hero.</p>
+        </div>
+    </section>
 </body>
 
 </html>
