--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="saddlebrown-color">Mishkat Khan</span> World!</h1>
@@ -31,7 +31,7 @@
             <img src="images/mishkat-pic-with-bg (1).png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div>
             <img src="images/mishkat-pic-with-bg(2).png" alt="">
         </div>
@@ -51,21 +51,27 @@
     </section>
     <section class="experience-area">
         <h1>Experiences</h1>
-        <div>
-            <h1>Full Stack Developer</h1>
-            <h3>2023-Present | Pro Level Developer</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
-                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
-                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
-        </div>
-        <div>
-            <h1>Baby Web Developer</h1>
-            <h3>2021-2023 | Hero Learner</h3>
-            <p>My aim was never to be a Web Developer.I wanted to be something else.But one day I read an article about
-                Programming and Web Developing.I felt interested.Then I started to watch tutorials about these
-                things.Day by Day my interest grew up for web Development.So I made myself a Web developer.It was a very
-                interesting journey.But still I have a Long Way to go.I wanna learn and explore more.It was fun working
-                at Programming Hero.</p>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Developer</h1>
+                <h3>2023-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="half-width">
+                <h1>Baby Web Developer</h1>
+                <h3>2021-2023 | Hero Learner</h3>
+                <p>My aim was never to be a Web Developer.I wanted to be something else.But one day I read an article
+                    about
+                    Programming and Web Developing.I felt interested.Then I started to watch tutorials about these
+                    things.Day by Day my interest grew up for web Development.So I made myself a Web developer.It was a
+                    very
+                    interesting journey.But still I have a Long Way to go.I wanna learn and explore more.It was fun
+                    working
+                    at Programming Hero.</p>
+            </div>
         </div>
     </section>
 </body>
