--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Stack Developer</h1>
-                <h3>2023-Present | Pro Level Developer</h3>
+            <div class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="saddlebrown-color">2023-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="half-width">
-                <h1>Baby Web Developer</h1>
-                <h3>2021-2023 | Hero Learner</h3>
+            <div class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="saddlebrown-color">2021-2023 | Hero Learner</h3>
                 <p>My aim was never to be a Web Developer.I wanted to be something else.But one day I read an article
                     about
                     Programming and Web Developing.I felt interested.Then I started to watch tutorials about these
