--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="experience-item">
+            <div id="full-stack-experience" class="experience-item">
                 <h2>Full Stack Developer</h2>
                 <h3 class="saddlebrown-color">2023-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -60,7 +60,7 @@
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="experience-item">
+            <div id="web-dev-experience" class="experience-item">
                 <h2>Baby Web Developer</h2>
                 <h3 class="saddlebrown-color">2021-2023 | Hero Learner</h3>
                 <p>My aim was never to be a Web Developer.I wanted to be something else.But one day I read an article
@@ -74,6 +74,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Mishkat Khan 2023, a Programming Hero initiative</p>
+    </footer>
 </body>
 
 </html>
