--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 journey but it is a long way to go.I only want to tell this that please pray for me so that i can
                 fulfill my
                 dream and achieve my goal.</p>
-            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/maisha-khan-b40481216/">DOWNLOAD
+                RESUME</a>
         </div>
     </section>
     <section class="experience-area">
